<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">SCORE</string>
    <string name="appinfo">Game2048  Author:Y</string>
    <string name="_2048">2048</string>
    <string name="best">BEST</string>
    <string name="restart">ReStart</string>
    <string name="line">Join the numbers and get to the </string>
    <string name="tile">2048 tile!</string>

</resources>
