<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.game2048.MainActivity" >

	  <LinearLayout 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal">
	      
	       <TextView 
           android:id="@+id/tv2048"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/_2048"
           android:textSize="32sp"
           android:textColor="#696969"
           android:layout_marginRight="50dp"
           android:layout_marginLeft="10dp"/>
	       
	       <LinearLayout 
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:layout_marginRight="10dp"
	           android:layout_marginTop="5dp"
	           android:background="#D3D3D3"
	           android:orientation="vertical">
	           
	           <TextView 
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/score"
	               android:layout_gravity="center_horizontal"
	               android:textAppearance="?android:attr/textAppearanceSmall"
	               android:textColor="#FFFFFF"
	               />
	           <TextView 
	               android:id="@+id/tvscore"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_gravity="center_horizontal"
	               android:textAppearance="?android:attr/textAppearanceSmall"
	               android:textColor="#FFFFFF"
	               />
	       </LinearLayout>
	       <LinearLayout 
	           android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:layout_marginRight="10dp"
	           android:layout_marginTop="5dp"
	           android:background="#D3D3D3"
	           android:orientation="vertical">
	           
	           <TextView 
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/best"
	               android:layout_gravity="center_horizontal"
	               android:textAppearance="?android:attr/textAppearanceSmall"
	               android:textColor="#FFFFFF"
	               />
	           <TextView 
	               android:id="@+id/bestscore"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_gravity="center_horizontal"
	               android:textAppearance="?android:attr/textAppearanceSmall"
	               android:textColor="#FFFFFF"/>
	       </LinearLayout>
	  </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp">
        
        <TextView 
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#696969"/>
        
        <TextView 
            android:id="@+id/tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/line"
            android:text="@string/tile"
            android:textSize="15sp"
            android:textColor="#000000"/>
        
    </RelativeLayout>

    <FrameLayout 
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
	    <com.example.game2048.GamenView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:id="@+id/gameview">
	    </com.example.game2048.GamenView>
	    
	    <com.example.game2048.AnimationLayer
	        android:id="@+id/animationlayer"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	    </com.example.game2048.AnimationLayer>
    </FrameLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">
        
         <Button 
	        android:id="@+id/newgamebtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/restart"
	        android:layout_alignParentRight="true"/>"
    </RelativeLayout>
   
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appinfo"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    
</LinearLayout>
